# sdk-nrf

./: Jenkinsfile  west.yml
applications/asset_tracker_v2/: sample.yaml
applications/matter_bridge/: sample.yaml
applications/matter_bridge/doc/: matter_bridge_description.rst
applications/nrf_desktop/: board_configuration.rst  description.rst  nRF21540ek_support.rst
applications/serial_lte_modem/: sample.yaml
applications/serial_lte_modem/doc/: slm_description.rst
boards/nordic/thingy91/: Kconfig
boards/nordic/thingy91x/: CMakeLists.txt  Kconfig
cmake/: extensions.cmake  multi_image.cmake
doc/nrf/config_and_build/: multi_image.rst
doc/nrf/device_guides/: nrf70.rst  nrf91.rst
doc/nrf/includes/: sample_board_rows.txt
doc/nrf/samples/: wifi_zephyr.rst
include/modem/: sms.h
lib/location/: scan_wifi.c  scan_wifi.h
lib/sms/: CMakeLists.txt  Kconfig  parser.c  parser.h  sms.c  sms_at.c  sms_at.h  sms_deliver.c  sms_deliver.h  sms_submit.c  sms_submit.h  string_conversion.c  string_conversion.h
modules/trusted-firmware-m/: CMakeLists.txt
modules/wfa-qt/src/: utils.c
samples/benchmarks/coremark/: sample.yaml
samples/bluetooth/central_and_peripheral_hr/: sample.yaml
samples/bluetooth/central_hids/: sample.yaml
samples/bluetooth/direct_test_mode/: sample.yaml
samples/bluetooth/peripheral_hids_keyboard/: sample.yaml
samples/bluetooth/peripheral_hids_mouse/: sample.yaml
samples/bluetooth/peripheral_lbs/: sample.yaml
samples/cellular/location/: sample.yaml
samples/cellular/lwm2m_client/: sample.yaml
samples/cellular/modem_shell/: sample.yaml
samples/cellular/modem_shell/tests/: CMakeLists.txt  Kconfig  prj.conf  testcase.yaml
samples/cellular/modem_shell/tests/src/: modem_shell_test.c
samples/cellular/nidd/: sample.yaml
samples/cellular/nrf_cloud_multi_service/: README.rst  sample.yaml
samples/cellular/slm_shell/: sample.yaml
samples/cellular/udp/: sample.yaml
samples/crypto/aes_cbc/: sample.yaml
samples/crypto/aes_ccm/: sample.yaml
scripts/: memory-threshold-list.yaml  quarantine.yaml  quarantine_integration.yaml
subsys/nrf_security/: Kconfig
sysbuild/: CMakeLists.txt
tests/lib/sms/: CMakeLists.txt  Kconfig  prj.conf  run_coverage
tests/lib/sms/src/: sms_test.c
(+90 files in other folders)
